<resources>
    <string name="app_name">WhyKnots!</string>
    <string name="button_instructions">Info about knots</string>
    <string name="square_knot">Square Knot</string>
    <string name="two_half_hitches">Two Half Hitches</string>
    <string name="timber_hitch">Timber Hitch</string>
    <string name="bowline">Bowline</string>
    <string name="clove_hitch">Clove Hitch</string>
    <string name="taut_line_hitch">Taut-line Hitch</string>
    <string name="sheet_bend">Sheet Bend</string>
    <string name="square_knot_i">Square Knot</string>
    <string name="two_half_hitches_i">Two Half Hitches</string>
    <string name="timber_hitch_i">Timber Hitch</string>
    <string name="bowline_i">Bowline</string>
    <string name="clove_hitch_i">Clove Hitch</string>
    <string name="taut_line_hitch_i">Taut-line Hitch</string>
    <string name="sheet_bend_i">Sheet Bend</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
